# vehichle-parking-app-v2

backend/: .gitignore  celery_app.py  celery_app.py.orig  celerybeat-schedule  config.py  pyproject.toml  run.py
backend/app/: __init__.py  celery_instance.py  celery_utils.py  extensions.py  models.py  tasks.py
backend/app/api/: admin_routes.py  auth_routes.py  routes.py  user_routes.py
backend/app/templates/: monthly_report.html
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: LandingPage.vue  PaymentPortal.vue  Sidebar.vue
frontend/src/components/admin/: AdminDashboard.vue  ParkingLotDetails.vue
frontend/src/components/auth/: Login.vue  Register.vue
frontend/src/components/user/: UserDashboard.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js
